fecha y hora exacta y finalizado la migracion a la nueva interfaz

--- a/NubeBooks/Views/Admin/ComprobantesEgreso.cshtml
+++ b/NubeBooks/Views/Admin/ComprobantesEgreso.cshtml
@@ -23,7 +23,7 @@
                     data: $('form.element').serialize(),
                     success: function (msg) {
                         $("#modal-form").modal('hide');
-                        window.location.href = "/Admin/Comprobantes";
+                        window.location.href = "/Admin/ComprobantesEgreso";
                     },
                     error: function () {
                         alert("failure");
