--- a/NubeBooks/Views/Admin/ComprobantesIngreso.cshtml
+++ b/NubeBooks/Views/Admin/ComprobantesIngreso.cshtml
@@ -24,7 +24,7 @@
                     data: $('form.element').serialize(),
                     success: function (msg) {
                         $("#modal-form").modal('hide');
-                        window.location.href = "/Admin/Comprobantes";
+                        window.location.href = "/Admin/ComprobantesIngreso";
                     },
                     error: function () {
                         alert("failure");
