--- a/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
+++ b/NubeBooks/Views/Shared/_LayoutAdmin.cshtml
@@ -178,6 +178,11 @@
                                             <span>Egresos</span>
                                         </a>
                                     </li>
+                                    <li class="@ViewBag.navbar.lstOptions[3].lstOptions[2].cadena">
+                                        <a href="@Url.Action("ComprobantesAnulados", "Admin")">
+                                            <span>Anulados</span>
+                                        </a>
+                                    </li>
                                 </ul>
                             </li>
                             <li class="@ViewBag.navbar.lstOptions[9].cadena">
