--- a/NubeBooks/Views/Admin/ComprobantesAnulados.cshtml
+++ b/NubeBooks/Views/Admin/ComprobantesAnulados.cshtml
@@ -7,30 +7,6 @@
 @section scripts{
     <script type="text/javascript">
         $(function () {
-            $('#modal-form2').on('show.bs.modal', function (e) {
-                var button = $(e.relatedTarget);
-                var idElement = button.data('id');
-                var nroDocumento = button.data('nro');
-                var nombreDocumento = button.data('doc');
-                var modal = $(this);
-                modal.find('.modal-title').text('Anular Elemento: ' + nombreDocumento + " " + nroDocumento);
-                modal.find('.modal-body input').val(idElement);
-            });
-            $("input#anular").click(function () {
-                var idelement = $('form.element').serialize();
-                $.ajax({
-                    type: "POST",
-                    url: "/Admin/AnularComprobante",
-                    data: $('form.element').serialize(),
-                    success: function (msg) {
-                        $("#modal-form").modal('hide');
-                        window.location.href = "/Admin/ComprobantesIngreso";
-                    },
-                    error: function () {
-                        alert("failure");
-                    }
-                });
-            });
             $('#modal-form').on('show.bs.modal', function (e) {
                 var button = $(e.relatedTarget);
                 var idElement = button.data('id');
@@ -68,14 +44,14 @@
             var FechaInicio = fechaInicio.split("/"); FechaInicio = FechaInicio[2] + "/" + FechaInicio[1] + "/" + FechaInicio[0];
             var FechaFin = fechaFin.split("/"); FechaFin = FechaFin[2] + "/" + FechaFin[1] + "/" + FechaFin[0];
 
-            return "/Admin/ExportarComprobantes/?idTipoComprobante=1&" + "FechaInicio=" + encodeURIComponent(FechaInicio) + "&" + "FechaFin=" + encodeURIComponent(FechaFin);
+            return "/Admin/ExportarComprobantes/?idTipoComprobante=3&" + "FechaInicio=" + encodeURIComponent(FechaInicio) + "&" + "FechaFin=" + encodeURIComponent(FechaFin);
         }
     </script>
 }
 
 <div class="bg-light lter b-b wrapper-md">
     <button class="btn m-b-xs btn-sm btn-info btn-addon pull-right m-l open-modal" data-toggle="modal" data-target="#modal-form-exportar"><i class="fa fa-cloud-download"></i>Exportar</button>
-    <a href="@Url.Action("Comprobante", "Admin", new { id = 0, idTipoComprobante = 1 })" class="btn m-b-xs btn-sm btn-success btn-addon pull-right"><i class="fa fa-plus"></i>Agregar Nuevo</a>
+    @*<a href="@Url.Action("Comprobante", "Admin", new { id = 0, idTipoComprobante = 3 })" class="btn m-b-xs btn-sm btn-success btn-addon pull-right"><i class="fa fa-plus"></i>Agregar Nuevo</a>*@
     <h1 class="m-n font-thin h3">@ViewBag.Title</h1>
 </div>
 @Html.Partial("_showAlertMessages")
@@ -126,39 +102,15 @@
                                 <td class="text-center" style=@(item.Ejecutado ? "color:#8EC100;" : "color:red;")>@(item.Ejecutado ? "R" : "P" )</td>
                                 @{ var rIcon = ViewBag.EsUsuarioExterno ? "search" : "pencil"; var rTitle = ViewBag.EsUsuarioExterno ? "Visualizar" : "Editar"; }
                                 <td class="text-center">
-                                    <a href="@Url.Action("Comprobante", "Admin", new { id = item.IdComprobante })"><i class="fa fa-@rIcon" title="@rTitle"></i>&nbsp;</a>
+                                    <a href="@Url.Action("Comprobante", "Admin", new { id = item.IdComprobante })"><i class="fa fa-@rIcon" title="@rTitle"></i></a>&nbsp;
                                     @if (!ViewBag.EsUsuarioExterno)
-                                    {
-                                        <a href="#" class="open-modal" data-toggle="modal" data-target="#modal-form2" data-id="@item.IdComprobante" data-nro="@item.NroDocumento" data-doc="@item.NombreTipoDocumento"><i class="fa icon-ban" title="Anular"></i>&nbsp;</a>
-                                        <a href="#" class="open-modal" data-toggle="modal" data-target="#modal-form" data-id="@item.IdComprobante" data-nro="@item.NroDocumento" data-doc="@item.NombreTipoDocumento"><i class="fa fa-times" title="Eliminar"></i></a>
-                                    }
+                                    {<a href="#" class="open-modal" data-toggle="modal" data-target="#modal-form" data-id="@item.IdComprobante" data-nro="@item.NroDocumento" data-doc="@item.NombreTipoDocumento"><i class="fa fa-times" title="Eliminar"></i></a>}
                                 </td>
                             </tr>
                                         }
                                     }
                 </tbody>
             </table>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade modal-task" id="modal-form2">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">Anular Elemento: </h4>
-            </div>
-            <div class="modal-body">
-                <p>Estas a punto de anular este comprobante, al hacerlo también eliminaras los Movimientos asociados a este comprobante. ¿Estás seguro de proseguir?</p>
-                <form class="element" name="element">
-                    <input type="hidden" class="form-control" name="id" id="id-element">
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-                <input class="btn btn-info" type="submit" value="Anular" id="anular">
-            </div>
         </div>
     </div>
 </div>
@@ -220,3 +172,4 @@
         </div>
     </div>
 </div>
+
