--- a/NubeBooks/Views/Admin/EntidadesClientes.cshtml
+++ b/NubeBooks/Views/Admin/EntidadesClientes.cshtml
@@ -46,7 +46,8 @@
                             <tr>
                                 <td class="text-center">@item.Nombre</td>
                                 <td class="text-center">@item.NombreIdentificacion</td>
-                                <td class="text-center">@(item.Estado ? "Activo" : "Inactivo" )</td>
+                                @{ var eColor = item.Estado ? "#27c24c" : "red"; }
+                                <td class="text-center" style="color:@(eColor)">@(item.Estado ? "Activo" : "Inactivo" )</td>
                                 @{ var rIcon = ViewBag.EsUsuarioExterno ? "search" : "pencil"; var rTitle = ViewBag.EsUsuarioExterno ? "Visualizar" : "Editar"; }
                                 <td class="text-center">
                                     <a href="@Url.Action("Entidad", "Admin", new { id = item.IdEntidadResponsable })"><i class="fa fa-@rIcon" title="@rTitle"></i></a>
