--- a/NubeBooks/Views/Admin/Honorarios.cshtml
+++ b/NubeBooks/Views/Admin/Honorarios.cshtml
@@ -42,7 +42,8 @@
                         {
                             <tr>
                                 <td>@item.Nombre</td>
-                                <td class="text-center">@(item.Estado ? "Activo" : "Inactivo" )</td>
+                                @{ var eColor = item.Estado ? "#27c24c" : "red"; }
+                                <td class="text-center" style="color:@(eColor)">@(item.Estado ? "Activo" : "Inactivo" )</td>
                                 <td class="text-center">
                                     <a href="@Url.Action("Honorario", new { id = item.IdHonorario })"><i class="fa fa-pencil"></i></a>
                                 </td>
