--- a/NubeBooks/Views/Admin/Periodos.cshtml
+++ b/NubeBooks/Views/Admin/Periodos.cshtml
@@ -34,8 +34,8 @@
                         <th >Nombre</th>
                         <th class="text-center">Fecha Inicio</th>
                         <th class="text-center">Fecha Fin</th>
-                        <th class="text-center" style="width:10%">Estado</th>
-                        <th class="text-center" style="width:20%">Opc.</th>
+                        <th class="text-center">Estado</th>
+                        <th class="text-center" style="width:10%">Opc.</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -47,7 +47,8 @@
                                 <td>@item.Nombre</td>
                                 <td class="text-center">@item.FechaInicio.ToString("yyyy/MM/dd", CultureInfo.CreateSpecificCulture("es-PE"))</td>
                                 <td class="text-center">@item.FechaFin.ToString("yyyy/MM/dd", CultureInfo.CreateSpecificCulture("es-PE"))</td>
-                                <td class="text-center">@(item.Active ? "Activo" : "Inactivo" )</td>
+                                @{ var eColor = item.Active ? "#27c24c" : "red"; }
+                                <td class="text-center" style="color:@(eColor)">@(item.Active ? "Activo" : "Inactivo" )</td>
                                 <td class="text-center">
                                     <a href="@Url.Action("Periodo", new { id = item.IdPeriodo })"><i class="fa fa-pencil"></i></a>
                                 </td>
