--- a/NubeBooks/Views/Admin/Ubicaciones.cshtml
+++ b/NubeBooks/Views/Admin/Ubicaciones.cshtml
@@ -44,7 +44,8 @@
                         {
                             <tr>
                                 <td class="text-center">@item.Nombre</td>
-                                <td class="text-center">@(item.Estado ? "Activo" : "Inactivo" )</td>
+                                @{ var eColor = item.Estado ? "#27c24c" : "red"; }
+                                <td class="text-center" style="color:@(eColor)">@(item.Estado ? "Activo" : "Inactivo" )</td>
                                 @{ var rIcon = ViewBag.EsUsuarioExterno ? "search" : "pencil"; var rTitle = ViewBag.EsUsuarioExterno ? "Visualizar" : "Editar"; }
                                 <td class="text-center">
                                     <a href="@Url.Action("Ubicacion", "Admin", new { id = item.IdUbicacion })"><i class="fa fa-@rIcon" title="@rTitle"></i></a>&nbsp;
