--- a/NubeBooks/Views/Admin/Usuarios.cshtml
+++ b/NubeBooks/Views/Admin/Usuarios.cshtml
@@ -33,8 +33,8 @@
                         <th >Nombre</th>
                         <th class="text-center">Tipo de Usuario</th>
                         <th class="text-center">Cuenta</th>
-                        <th class="text-center" style="width:10%">Estado</th>
-                        <th class="text-center" style="width:20%">Opc.</th>
+                        <th class="text-center">Estado</th>
+                        <th class="text-center" style="width:10%">Opc.</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -46,7 +46,8 @@
                                 <td >@item.Nombre</td>
                                 <td class="text-center">@item.NombreRol</td>
                                 <td class="text-center">@item.Cuenta</td>
-                                <td class="text-center">@(item.Active ? "Activo" : "Inactivo" )</td>
+                                @{ var eColor = item.Active ? "#27c24c" : "red"; }
+                                <td class="text-center" style="color:@(eColor)">@(item.Active ? "Activo" : "Inactivo" )</td>
                                 <td class="text-center">
                                     <a href="@Url.Action("Usuario", new { id = item.IdUsuario })"><i class="fa fa-pencil"></i></a>
                                 </td>
